back: swagger: GET comments now returns Array, fix function for recursive transformation of comments; front: creating comments [wip]
